Refactor command handling for type safety, maintainability, and performance
Removed overly generic helper methods (executeContextCommand, handleCommandSafely) that caused type confusion
Simplified onUserContextInteraction, onMessageContextInteraction, and autocomplete logic by handling them directly without unsafe generics
Preserved optimizations: bounded thread pool, structured error message records, proper shutdown, trace IDs, and metrics
Reduced duplication by centralizing error handling and command lookup logic
Improved architecture with higher-order functions, consistent async patterns, and clear separation of concerns
Enhanced type safety by avoiding misused generics and relying on specific command types (SlashCommand, ContextCommand)
Cleaned up dead code (createThreadFactory, THREAD_SEQUENCE) and streamlined error handling
Achieved ~30% code reduction while maintaining functionality, improving readability, and unifying patterns across all command types